--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kibanov</title>
 </head>
 <body>
-    <h1>git</h1>
+    <h1>Я впервые разместил свой код на удаленном репозитории</h1>
     <h2>git</h2>
 </body>
 </html>
